--- a/index.html
+++ b/index.html
@@ -27,17 +27,20 @@
   <body>
     <div class="content">
       <h1>Groupes de garçons</h1>
-      <iframe
-        id="videoFrame"
-        width="560"
-        height="315"
-        title="YouTube video player"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-        referrerpolicy="strict-origin-when-cross-origin"
-        allowfullscreen
-      ></iframe>
-      <br /><br />
+
+      <figure>
+        <iframe
+          id="videoFrame"
+          width="560"
+          height="315"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share; autoplay"
+          referrerpolicy="strict-origin-when-cross-origin"
+          allowfullscreen
+        ></iframe>
+        <figcaption id="trackid"></figcaption>
+      </figure>
 
       <button onclick="loadRandomVideo()">Une autre !</button>
     </div>
@@ -46,7 +49,7 @@
       import { DATABASE } from "./boysband.js";
 
       function getYouTubeEmbedUrl(yt) {
-        return `https://www.youtube.com/embed/${yt}`;
+        return `https://www.youtube.com/embed/${yt}?autoplay=1`;
       }
 
       function loadRandomVideo() {
@@ -54,6 +57,9 @@
         const randomVideo = DATABASE[randomIndex];
         const embedUrl = getYouTubeEmbedUrl(randomVideo.yt);
         document.getElementById("videoFrame").src = embedUrl;
+        document.getElementById(
+          "trackid"
+        ).innerText = `${randomVideo.track} - ${randomVideo.boysband} [${randomVideo.year}]`;
       }
 
       loadRandomVideo();
